--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -59,12 +59,14 @@
             <div class="col-md-9">
               <% if (success_msg != false) { %>
                   <div class="alert alert-success">
-              <% } %>    
+                    <%= success_msg %>   
                   </div>
-              <% if (success_msg != false) { %>
+              <% } %> 
+              <% if (error_msg != false) { %>
                   <div class="alert alert-danger">
-              <% } %>
+                    <%= error_msg %>
                   </div>
+              <% } %>
 
             
 
