--- a/views/search/index.ejs
+++ b/views/search/index.ejs
@@ -9,17 +9,19 @@
     <%= error_msg %>
     </div>
 <% } %>
+
     <h1>Comic Search</h1>
     <p>Search for comics to add to your collection.</p>
-    <form method="post" action="/users/login">
+    <form method="post" action="/search/results">
         <div class="form-group">
             <label>Title</label>
             <input type="text" class="form-control" name="title" placeholder="Comic Title">
         </div>
         <div class="form-group">
-            <label>Issue Number</label>
-            <input type="text" class="form-control" name="issue" placeholder="issue">
+            <label>Issue</label>
+            <input type="text" class="form-control" name="issueNum" placeholder="Issue number">
         </div>
-        <button type="submit" class="btn btn-default">Search</button>
+        <a href="/search/results" class="btn btn-default">Search</a>
     </form>
+
 <% include ../partials/footer %>
