Added notes field. Able to edit a comic and save changes.

--- a/views/comics/add.ejs
+++ b/views/comics/add.ejs
@@ -22,8 +22,12 @@
             <input type="text" class="form-control" name="year">
         </div>
         <div class="form-group">
-            <label>Info</label>
-            <textarea class="form-control" name="info" placeholder="Info"></textarea>
+            <label>Story Details</label>
+            <textarea class="form-control" name="info"></textarea>
+        </div>
+        <div class="form-group">
+            <label>Notes</label>
+            <textarea class="form-control" name="notes"></textarea>
         </div>
         <div class="form-group">
             <label>Cover URL</label>
