--- a/views/comics/details.ejs
+++ b/views/comics/details.ejs
@@ -11,12 +11,16 @@
                 <li class="list-group-item"><strong>Artist:</strong> <%= comic.artist %></li>
                 <li class="list-group-item"><strong>Release Year:</strong> <%= comic.year %></li>
             </ul>
+            <div>
+                <h4>Notes:</h4>
+                <p><%= comic.notes %></p>
+            </div>
         </div>
     </div>
 <hr />
     <div class="row">
         <div class="col-md-12">
-            <h4>Details:</h4>
+            <h4>Story Details:</h4>
             <p><%= comic.info %></p>
         </div>
     </div>
