--- a/views/search/index.ejs
+++ b/views/search/index.ejs
@@ -14,11 +14,11 @@
     <p>Search for comics to add to your collection.</p>
     <form method="post" action="/search/results">
         <div class="form-group">
-            <label>Title</label>
+            <label>Title*</label>
             <input type="text" class="form-control" name="title" placeholder="Comic Title">
         </div>
         <div class="form-group">
-            <label>Issue</label>
+            <label>Issue #</label>
             <input type="text" class="form-control" name="issueNum" placeholder="Issue number">
         </div>
         <a href="/search/results" class="btn btn-default">Search</a>
