--- a/views/comics/index.ejs
+++ b/views/comics/index.ejs
@@ -7,9 +7,10 @@
                 <% subset = comics.slice(i, i+group); %>           
                 <div class="row comics">
                     <% for (var x=0; x < subset.length; x++) { %> 
-                    <div class="col-md-2 comics">
+                    <div class="col-md-2 comics text-center">
                             <a href="/comics/details/<%=subset[x].id %>"><img src="<%= subset[x].cover %>"></a>
-                            <h4 class="comic-title text-center"><%= subset[x].title %></h4>
+                            <%= subset[x].title %>
+                            <!--<h4 class="comic-title text-center"><%= subset[x].title %></h4>-->
                             <p class="issue-num text-center">#<%= subset[x].issueNum %></p>
                     </div>
                     <% } %>
