--- a/views/comics/index.ejs
+++ b/views/comics/index.ejs
@@ -1,6 +1,8 @@
 <% include ../partials/header %>
     <h1>My Comics
-        <a href="/comics/add" class="btn btn-success pull-right">Add Comic</a>
+        <% if (authdata != null) { %>
+            <a href="/comics/add" class="btn btn-success pull-right">Add Comic</a>
+        <% } %>
     </h1>
             <% var j = comics.length, group = 6, subset; %>
             <% for (var i=0; i < j; i += group) { %>
