--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,27 +19,27 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse navbar-right">
           <ul class="nav navbar-nav">
-
-            <li><a href="/users/register">Register</a></li>
-            <li><a href="/users/login">Login</a></li>
- 
-            <!--<li><a href="/users/logout">Logout</a></li>-->
-
+            <% if (authdata == null) { %>
+              <li><a href="/users/register">Register</a></li>
+              <li><a href="/users/login">Login</a></li> 
+            <% } else { %>
+              <li><a href="/users/logout">Logout</a></li>
+            <% } %>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <div class="container">
- 
+      <% if (authdata == null) { %>     
         <div class="row">
           <div class="col-md-12">
-
-            
-
+            <% if (page == '/') { %>
+              <a href="/comics"><img src="/images/banner.jpg"></a>    
+            <% } %>
           </div>
         </div>
-
+      <% } else { %>
         <div class="row">
           <div class="col-md-12">
 
@@ -48,12 +48,12 @@
      
         <div class="row"><!-- ./partials/header -->
             <div class="col-md-3">
-
-             <!-- <p class="well well-sm">Welcome, </p> -->
-
+              <% if(authdata != null) { %>
+                <p class="well well-sm">Welcome, <%= user.first_name %> <%= user.last_name %> </p> 
+              <% } %>
                 <div class="list-group table-of-contents">
                     <a class="list-group-item" href="/comics">View Your Comics</a>
-                    <a class="list-group-item" href="/search">Search</a>
+                    <!--<a class="list-group-item" href="/search">Search</a>-->
                 </div>         
             </div>
             <div class="col-md-9">
@@ -68,6 +68,6 @@
                   </div>
               <% } %>
 
-            
+      <% } %>
 
             
