--- a/views/search/index.ejs
+++ b/views/search/index.ejs
@@ -21,7 +21,7 @@
             <label>Issue #</label>
             <input type="text" class="form-control" name="issueNum" placeholder="Issue number">
         </div>
-        <a href="/search/results" class="btn btn-default">Search</a>
+        <button type="submit" class="btn btn-default">Search</button>
     </form>
 
 <% include ../partials/footer %>
