--- a/views/search/index.ejs
+++ b/views/search/index.ejs
@@ -14,7 +14,7 @@
     <p>Search for comics to add to your collection.</p>
     <form method="post" action="/search/results">
         <div class="form-group">
-            <label>Title*</label>
+            <label>Title starts with (required)*</label>
             <input type="text" class="form-control" name="title" placeholder="Comic Title">
         </div>
         <div class="form-group">
