--- a/views/comics/edit.ejs
+++ b/views/comics/edit.ejs
@@ -28,6 +28,6 @@
         <br />
         <hr />
         <button type="submit" class="btn btn-default">Submit</button>
-        <a class="btn btn-danger" href="/albums">Close</a>
+        <a class="btn btn-danger" href="/comics/details/<%=id %>">Cancel</a>
     </form>
 <% include ../partials/footer %>    
