--- a/views/comics/details.ejs
+++ b/views/comics/details.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
     <a href="/comics" class="btn btn-default">Go Back</a>
-    <h1><%=comic.title %> #<%=comic.issue %></h1>
+    <h1><%=comic.title %></h1>
     <div class="row comic">
         <div class="col-md-4">
             <img src="<%= comic.cover %>">
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="col-md-12">
             <h4>Story Details:</h4>
-            <p><%= comic.info %></p>
+            <p><%- comic.info %></p>
         </div>
     </div>
 <br />
