--- a/views/comics/index.ejs
+++ b/views/comics/index.ejs
@@ -13,7 +13,7 @@
                             <a href="/comics/details/<%=subset[x].id %>"><img src="<%= subset[x].cover %>"></a>
                             <%= subset[x].title %>
                             <!--<h4 class="comic-title text-center"><%= subset[x].title %></h4>-->
-                            <p class="issue-num text-center">#<%= subset[x].issueNum %></p>
+                            <!--<p class="issue-num text-center">#<%= subset[x].issueNum %></p>-->
                     </div>
                     <% } %>
                 </div>
