--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,10 @@
     border: 2px #fff solid;
 }
 
+.comics {
+    margin-bottom:1.5em;
+}
+
 .comics img:hover{
     opacity:0.7;
     cursor:pointer;
