--- a/views/comics/edit.ejs
+++ b/views/comics/edit.ejs
@@ -21,7 +21,7 @@
         <hr />
         <div class="row">
             <div class="col-md-12">
-                <h4>Details:</h4>
+                <h4>Story Details:</h4>
                 <textarea class="form-control" name="info" ><%= comic.info %></textarea>
             </div>
         </div>
