Able to list multiple creators in comic search

--- a/views/search/index.ejs
+++ b/views/search/index.ejs
@@ -11,7 +11,7 @@
 <% } %>
 
     <h1>Comic Search</h1>
-    <p>Search for comics to add to your collection.</p>
+    <p>Search for Marvel&copy; comics to add to your collection.</p>
     <form method="post" action="/search/results">
         <div class="form-group">
             <label>Title starts with (required)*</label>
