--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,73 +1,87 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Comic Book Manager</title>
-    <link rel="stylesheet" href="http://bootswatch.com/superhero/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-    <nav class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Comic Book Manager</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse navbar-right">
-          <ul class="nav navbar-nav">
-            <% if (authdata == null) { %>
-              <li><a href="/users/register">Register</a></li>
-              <li><a href="/users/login">Login</a></li> 
-            <% } else { %>
-              <li><a href="/users/logout">Logout</a></li>
-            <% } %>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
 
+<head>
+  <title>Comic Book Manager</title>
+  <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-default">
     <div class="container">
-      <% if (authdata == null) { %>     
-        <div class="row">
-          <div class="col-md-12">
-            <% if (page == '/') { %>
-              <a href="/comics"><img src="/images/banner.jpg"></a>    
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+          aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Comic Book Manager</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse navbar-right">
+        <ul class="nav navbar-nav">
+          <% if (authdata == null) { %>
+            <li>
+              <a href="/users/register">Register</a>
+            </li>
+            <li>
+              <a href="/users/login">Login</a>
+            </li>
+            <% } else { %>
+              <li>
+                <a href="/users/logout">Logout</a>
+              </li>
+              <% } %>
+        </ul>
+      </div>
+      <!--/.nav-collapse -->
+    </div>
+  </nav>
+
+  <div class="container">
+    <% if (authdata == null) { %>
+      <div class="row">
+        <div class="col-md-12">
+          <% if (page == '/') { %>
+            <a href="/comics">
+              <img src="/images/banner.jpg">
+            </a>
             <% } %>
-          </div>
         </div>
+      </div>
       <% } else { %>
         <div class="row">
           <div class="col-md-12">
 
           </div>
         </div>
-     
-        <div class="row"><!-- ./partials/header -->
-            <div class="col-md-3">
-              <% if(authdata != null) { %>
-                <p class="well well-sm">Welcome, <%= user.first_name %> <%= user.last_name %> </p>
+
+        <div class="row">
+          <!-- ./partials/header -->
+          <div class="col-md-3">
+            <% if(authdata != null) { %>
+              <p class="well well-sm">Welcome,
+                <%= user.first_name %>
+                  <%= user.last_name %>
+              </p>
               <% } %>
                 <div class="list-group table-of-contents">
-                    <a class="list-group-item" href="/comics">View Your Comics</a>
-                    <a class="list-group-item" href="/search">Search</a>
-                </div>         
-            </div>
-            <div class="col-md-9">
-              <% if (success_msg != false) { %>
-                  <div class="alert alert-success">
-                    <%= success_msg %>   
-                  </div>
-              <% } %> 
-              <% if (error_msg != false) { %>
+                  <a class="list-group-item" href="/comics">View Your Comics</a>
+                  <a class="list-group-item" href="/search">Search</a>
+                </div>
+          </div>
+          <div class="col-md-9">
+            <% if (success_msg != false) { %>
+              <div class="alert alert-success">
+                <%= success_msg %>
+              </div>
+              <% } %>
+                <% if (error_msg != false) { %>
                   <div class="alert alert-danger">
                     <%= error_msg %>
                   </div>
-              <% } %>
+                  <% } %>
 
-      <% } %>
-
-            
+                    <% } %>
